--- a/stkool/index.html
+++ b/stkool/index.html
@@ -7,6 +7,7 @@
     <title></title>>
     <link rel="stylesheet" href="../bulma.min.css">
     <script src="../vue.min.js"></script>
+    <script src="data.js"></script>
 </head>
 
 <body>
