--- a/stkool/index.html
+++ b/stkool/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../bulma.min.css">
     <script src="../vue.min.js"></script>
     <script src="data.js"></script>
+    <script src="common.js"></script>
 </head>
 
 <body>
