--- a/stkool/index.html
+++ b/stkool/index.html
@@ -9,6 +9,7 @@
     <script src="../vue.min.js"></script>
     <script src="data.js"></script>
     <script src="common.js"></script>
+    <script src="script.js"></script>
 </head>
 
 <body>
