--- a/stkool/index.html
+++ b/stkool/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>>
+    <title></title>
     <link rel="stylesheet" href="../bulma.min.css">
     <script src="../vue.min.js"></script>
     <script src="data.js"></script>
