--- a/stkool/index.html
+++ b/stkool/index.html
@@ -7,12 +7,21 @@
     <title></title>
     <link rel="stylesheet" href="../bulma.min.css">
     <script src="../vue.min.js"></script>
+<!--
     <script src="data.js"></script>
     <script src="common.js"></script>
     <script src="script.js"></script>
+-->
+
+<script src="test.js"></script>
+
 </head>
 
 <body>
+
+<div id="test"></div>
+
+    <!--
     <header class="hero is-primary is-bold">
         <div class="hero-body">
             <div class="container">
@@ -166,5 +175,6 @@
         </div>
     </footer>
 </body>
+-->
 
 </html>
