--- a/stkool/index.html
+++ b/stkool/index.html
@@ -13,7 +13,7 @@
     <script src="script.js"></script>
 -->
 
-<script src="test.js"></script>
+<script src="test.js">{{ test }}</script>
 
 </head>
 
