--- a/test/index.html
+++ b/test/index.html
@@ -7,18 +7,12 @@
     <title></title>
     <link rel="stylesheet" href="../bulma.min.css">
     <script src="../vue.min.js"></script>
-<!--
-    <script src="data.js"></script>
-    <script src="common.js"></script>
-    <script src="script.js"></script>
--->
-
 <script src="test.js">{{ test }}</script>
 
 </head>
 
 <body>
 
-<div id="test">{{ test }}</div>
+<div id="test">{{ message }}</div>
 
 </body>
