--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,7 @@
     <title></title>
     <link rel="stylesheet" href="../bulma.min.css">
     <script src="../vue.min.js"></script>
-<script src="test.js">{{ test }}</script>
+<script src="script.js">{{ test }}</script>
 
 </head>
 
