--- a/test/index.html
+++ b/test/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <link rel="stylesheet" href="../bulma.min.css">
-    <script src="../vue.min.js"></script>
+    <script src="../vue.js"></script>
 <script src="script.js"></script>
 
 </head>
