--- a/test/index.html
+++ b/test/index.html
@@ -7,12 +7,14 @@
     <title></title>
     <link rel="stylesheet" href="../bulma.min.css">
     <script src="../vue.js"></script>
-<script src="script.js"></script>
+    <script src="script.js"></script>
 
 </head>
 
 <body>
 
-<div id="test">{{ message }}</div>
+    <div id="app">
+        {{ message }}
+    </div>
 
 </body>
