--- a/stkool/index.html
+++ b/stkool/index.html
@@ -4,24 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
     <link rel="stylesheet" href="../bulma.min.css">
+    <link rel="stylesheet" href="style.css">
     <script src="../vue.min.js"></script>
-<!--
-    <script src="data.js"></script>
-    <script src="common.js"></script>
-    <script src="script.js"></script>
--->
-
-<script src="test.js">{{ test }}</script>
-
 </head>
 
 <body>
-
-<div id="test"></div>
-
-    <!--
     <header class="hero is-primary is-bold">
         <div class="hero-body">
             <div class="container">
@@ -174,7 +162,11 @@
             </address>
         </div>
     </footer>
+
+    <script src="data.js"></script>
+    <script src="common.js"></script>
+    <script src="script.js"></script>
+
 </body>
--->
 
 </html>
