--- a/test/index.html
+++ b/test/index.html
@@ -4,17 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
     <link rel="stylesheet" href="../bulma.min.css">
-    <script src="../vue.js"></script>
-    <script src="script.js"></script>
-
+    <link rel="stylesheet" href="style.css">
+    <script src="../vue.min.js"></script>
 </head>
 
 <body>
 
-    <div id="app">
-        {{ message }}
-    </div>
+
+
+    <script src="data.js"></script>
+    <script src="common.js"></script>
+    <script src="script.js"></script>
 
 </body>
+
+</html>
