簡体字追加？したかな？

--- a/stkool/index.html
+++ b/stkool/index.html
@@ -171,6 +171,10 @@
             <address v-once class="content has-text-centered" id="address">
                 <strong>{{ sharedState.name }}</strong> Ver.{{ sharedState.ver }} by <a
                     :href="sharedState.url">{{ sharedState.auther }}</a>
+                <p>
+                    I want to translate this tool to 中文（简体）/ 한국어 / français / Deutsch.<br>
+                    Please contact me if you can help me.
+                </p>
             </address>
         </div>
     </footer>
