韓国語版が多分完成かな

--- a/stkool/index.html
+++ b/stkool/index.html
@@ -172,8 +172,8 @@
                 <strong>{{ sharedState.name }}</strong> Ver.{{ sharedState.ver }} by <a
                     :href="sharedState.url">{{ sharedState.auther }}</a>
                 <p>
-                    I want to translate this tool to 中文（简体）/ 한국어 / français / Deutsch.<br>
-                    Please contact me if you can help me.
+                    I want to translate this tool to français and Deutsch.<br>
+                    Please contact me if you can help. :)
                 </p>
             </address>
         </div>
