--- a/stkool/index.html
+++ b/stkool/index.html
@@ -179,10 +179,10 @@
         </div>
     </footer>
 
-    <script src="words.js"></script>
-    <script src="common.js"></script>
-    <script src="data.js"></script>
-    <script src="script.js"></script>
+    <script src="words.js?0926"></script>
+    <script src="common.js?0926"></script>
+    <script src="data.js?0926"></script>
+    <script src="script.js?0926"></script>
 
 </body>
 
