--- a/stkool/index.html
+++ b/stkool/index.html
@@ -68,9 +68,7 @@
                         <div>
                             <label class="label">{{ words['rank'][sharedState.lang] }} <input type="range"
                                     v-model="rank" :min="rankMin" :max="rankMax" class="slider">
-                                <span v-show="rank - rankMin">1-</span>
-                                <span v-show="rank !== rankMin">51-</span>
-                                {{ rankMin }}
+                                <span v-show="rank == rankMin">1-</span>
                                 {{ rank }}
                             </label>
                         </div>
