--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 
+<head>
+    <meta charset="UTF-8">
+</head>
 <body>
 
     <ul>
         <li><a href="stkool/">潜水艦ツクール</a></li>
+        <li><a href="dio/">OiTPKO</a></li>
         <li><a href="mtz/">潜水艦ミッツモール</a></li>
         <li><a href="hkh/">はいかいヘルパー</a></li>
+        <li><a href="tnm/">ツナメイカー</a></li>
     </ul>
 
 </body>
