--- a/hkh/index.html
+++ b/hkh/index.html
@@ -47,7 +47,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="box content" id="submarine" style="">
+                    <div class="box content" id="submarine">
                         <h2 class="subtitle">潜水艦</h2>
                         <label class="label">巡航速度 <input type="range" v-model="speed" :min="speedMin" :max="speedMax"
                                 step="5" class="slider">
