--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="mtz/">潜水艦ミッツモール</a></li>
         <li><a href="hkh/">はいかいヘルパー</a></li>
         <li><a href="tnm/">ツナメイカー</a></li>
+        <li><a href="isl/">無人島開拓</a></li>
     </ul>
 
 </body>
